classes info update

--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4027422851"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?66529189"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?4110944833" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?93278663" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?388134542"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?4237565960"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -64,10 +64,10 @@ var __adobewebfontsappname__ = "muse";
     <a class="nonblock nontext clearfix colelem" id="u24287-4" href="https://www.linkedin.com/in/nitcha-tothong-5a537184" data-muse-uid="U24287" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24287">Connect on Linkedin</span></p></a>
     <!-- /m_editable -->
    </div>
-   <div class="clearfix colelem" id="ppu24148-67"><!-- group -->
-    <div class="clearfix grpelem" id="pu24148-67"><!-- group -->
+   <div class="clearfix colelem" id="ppu24148-76"><!-- group -->
+    <div class="clearfix grpelem" id="pu24148-76"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U24148-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix grpelem" id="u24148-67" data-muse-uid="U24148" data-muse-type="txt_frame"><!-- content -->
+     <div class="clearfix grpelem" id="u24148-76" data-muse-uid="U24148" data-muse-type="txt_frame"><!-- content -->
       <p id="u24148-2"><span id="u24148">–</span></p>
       <p id="u24148-4">Exhibitions and Demos</p>
       <p id="u24148-6">2016</p>
@@ -92,15 +92,26 @@ var __adobewebfontsappname__ = "muse";
       <p id="u24148-61"><span id="u24148-59">Rest(less)</span> at Ploysang 3, TCDC, Bangkok.</p>
       <p id="u24148-64"><span id="u24148-62">Rest(less)</span> at Degree show2009, Parc Paragon, Bangkok.</p>
       <p id="u24148-65">&nbsp;</p>
+      <p id="u24148-67">–</p>
+      <p id="u24148-69">Teaching and Workshop</p>
+      <p id="u24148-71">Interactive Accessories, Manufacture NY, New York</p>
+      <p id="u24148-73">Wearable Technology Class, Ofcourse, Brooklyn</p>
+      <p id="u24148-74">&nbsp;</p>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U24545-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix grpelem" id="u24545-4" href="http://www.moutharcade.com/mealoffortune" data-muse-uid="U24545" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24545">Meal of Fortune</span></p></a>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U24560-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u24560-4" href="http://www.ofcn.io/" data-muse-uid="U24560" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24560">Ofcourse</span></p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U24566-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clearfix grpelem" id="u24566-4" href="http://manufactureny.org/" data-muse-uid="U24566" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24566">Manufacture NY</span></p></a>
+     <!-- /m_editable -->
     </div>
     <div class="clearfix grpelem" id="u24160"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U24058-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix grpelem" id="u24058-42" data-muse-uid="U24058" data-muse-type="txt_frame"><!-- content -->
+     <div class="clearfix grpelem" id="u24058-43" data-muse-uid="U24058" data-muse-type="txt_frame"><!-- content -->
       <p id="u24058-2">Press</p>
       <p id="u24058-4"><span id="u24058-3">Below you can find some on-line press articles.</span></p>
       <p id="u24058-9"><span id="u24058-5">If you are writing an article about my work, you are free to use images if you use proper credits</span><span id="u24058-6">.&nbsp; </span><span id="u24058-7">You can find my portrait here and please email me for access to particular project.</span><span id="u24058-8"></span></p>
@@ -116,14 +127,15 @@ var __adobewebfontsappname__ = "muse";
       <p id="u24058-19">&nbsp;</p>
       <p id="u24058-20">&nbsp;</p>
       <p id="u24058-21">&nbsp;</p>
-      <p id="u24058-23">–</p>
-      <p id="u24058-25">Awards</p>
-      <p id="u24058-31">A<span id="u24058-27">dobe</span> <span id="u24058-29">Design Achievement Awards</span> 2015</p>
-      <p id="u24058-34">S<span id="u24058-33">emifinalist for Lucid: you are dreaming</span></p>
-      <p id="u24058-35">&nbsp;</p>
-      <p id="u24058-37">Degree show 2009 by Art4d, Thailand</p>
-      <p id="u24058-39">Jury's selected Animation for Rest(less)</p>
-      <p id="u24058-40">&nbsp;</p>
+      <p id="u24058-22">&nbsp;</p>
+      <p id="u24058-24">–</p>
+      <p id="u24058-26">Awards</p>
+      <p id="u24058-32">A<span id="u24058-28">dobe</span> <span id="u24058-30">Design Achievement Awards</span> 2015</p>
+      <p id="u24058-35">S<span id="u24058-34">emifinalist for Lucid: you are dreaming</span></p>
+      <p id="u24058-36">&nbsp;</p>
+      <p id="u24058-38">Degree show 2009 by Art4d, Thailand</p>
+      <p id="u24058-40">Jury's selected Animation for Rest(less)</p>
+      <p id="u24058-41">&nbsp;</p>
      </div>
      <!-- /m_editable -->
     </div>
@@ -166,6 +178,9 @@ var __adobewebfontsappname__ = "muse";
     </div>
     <!-- m_editable region-id="editable-static-tag-U24277-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix grpelem" id="u24277-4" href="https://www.flickr.com/photos/famefamous/albums/72157667152536823" data-muse-uid="U24277" data-muse-type="txt_frame"><!-- content --><p id="u24277-2"><span class="Character-Style" id="u24277">here</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U24557-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix grpelem" id="u24557-4" href="https://www.wareable.com/wearable-tech/nyc-maker-faire-2016-best-wearable-vr-and-smart-home-devices" data-muse-uid="U24557" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24557">Wearable - The Best Wearable</span></p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu12721"><!-- group -->
