--- a/about.html
+++ b/about.html
@@ -13,15 +13,15 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "about.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=424057446"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=277592097"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4188414436" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4163626973"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=460370128" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=4072421088"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=109564089"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -113,7 +113,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix grpelem" id="u24160"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U24058-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u24058-50" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <div class="clearfix grpelem" id="u24058-48" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
       <p id="u24058-2">Press</p>
       <p id="u24058-4"><span id="u24058-3">Below you can find some on-line press articles.</span></p>
       <p id="u24058-9"><span id="u24058-5">If you are writing an article about my work, you are free to use images if you use proper credits</span><span id="u24058-6">.&nbsp; </span><span id="u24058-7">You can find my portrait here and please email me for access to particular project.</span><span id="u24058-8"></span></p>
@@ -132,15 +132,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p id="u24058-22">&nbsp;</p>
       <p id="u24058-24">–</p>
       <p id="u24058-26">Awards</p>
-      <p id="u24058-30"><span><a class="nonblock" href="https://www.fastcompany.com/3068873/world-changing-ideas-2017-winners"><span id="u24058-27">Fast Company’s World Changing Ideas 2017</span></a></span></p>
-      <p id="u24058-32">Finalists for Atta–matic: mind the body</p>
-      <p id="u24058-33">&nbsp;</p>
-      <p id="u24058-39">A<span id="u24058-35">dobe</span> <span id="u24058-37">Design Achievement Awards</span> 2015</p>
-      <p id="u24058-42">S<span id="u24058-41">emifinalist for Lucid: you are dreaming</span></p>
-      <p id="u24058-43">&nbsp;</p>
-      <p id="u24058-45">Degree show 2009 by Art4d, Thailand</p>
-      <p id="u24058-47">Jury's selected Animation for Rest(less)</p>
-      <p id="u24058-48">&nbsp;</p>
+      <p id="u24058-28">Fast Company’s World Changing Ideas 2017</p>
+      <p id="u24058-30">Finalists for Atta–matic: mind the body</p>
+      <p id="u24058-31">&nbsp;</p>
+      <p id="u24058-37">A<span id="u24058-33">dobe</span> <span id="u24058-35">Design Achievement Awards</span> 2015</p>
+      <p id="u24058-40">S<span id="u24058-39">emifinalist for Lucid: you are dreaming</span></p>
+      <p id="u24058-41">&nbsp;</p>
+      <p id="u24058-43">Degree show 2009 by Art4d, Thailand</p>
+      <p id="u24058-45">Jury's selected Animation for Rest(less)</p>
+      <p id="u24058-46">&nbsp;</p>
      </div>
      <!-- /m_editable -->
     </div>
@@ -187,6 +187,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U24557-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix grpelem" id="u24557-4" href="https://www.wareable.com/wearable-tech/nyc-maker-faire-2016-best-wearable-vr-and-smart-home-devices" data-muse-uid="U24557" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24557">Wearable - The Best Wearable</span></p></a>
     <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U24572-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <div class="pointer_cursor clearfix grpelem" id="u24572-6" data-muse-uid="U24572" data-muse-type="txt_frame"><!-- content -->
+     <a class="block" href="https://www.wareable.com/wearable-tech/nyc-maker-faire-2016-best-wearable-vr-and-smart-home-devices"><!-- Block link tag --></a>
+     <p><span><a class="nonblock" href="https://www.fastcompany.com/3068873/world-changing-ideas-2017-winners"><span class="Character-Style" id="u24572">Fast Company's World Changing Ideas 2017</span></a></span></p>
+    </div>
+    <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu12721"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U12721-BP_infinity" template="about.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
@@ -213,12 +219,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/new1mail-u7586-r-fr.png?crc=4051469361" alt=""/>
-   <img class="preload" src="images/new2fb-u7588-r-fr.png?crc=148424602" alt=""/>
-   <img class="preload" src="images/new3insta-u7590-r-fr.png?crc=203242076" alt=""/>
-   <img class="preload" src="images/new4vimeo-u7592-r-fr.png?crc=527731802" alt=""/>
-   <img class="preload" src="images/new5pin-u7594-r-fr.png?crc=4053791885" alt=""/>
-   <img class="preload" src="images/new6twitter-u7596-r-fr.png?crc=4116158665" alt=""/>
+   <img class="preload" src="images/new1mail-u12721-r-fr.png?crc=4051469361" alt=""/>
+   <img class="preload" src="images/new2fb-u12723-r-fr.png?crc=148424602" alt=""/>
+   <img class="preload" src="images/new3insta-u12725-r-fr.png?crc=203242076" alt=""/>
+   <img class="preload" src="images/new4vimeo-u12727-r-fr.png?crc=527731802" alt=""/>
+   <img class="preload" src="images/new5pin-u12729-r-fr.png?crc=4053791885" alt=""/>
+   <img class="preload" src="images/new6twitter-u12731-r-fr.png?crc=4116158665" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
