--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=424057446"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4163626973"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=460370128" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=260317560" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=109564089"/>
@@ -188,10 +188,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix grpelem" id="u24557-4" href="https://www.wareable.com/wearable-tech/nyc-maker-faire-2016-best-wearable-vr-and-smart-home-devices" data-muse-uid="U24557" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24557">Wearable - The Best Wearable</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U24572-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <div class="pointer_cursor clearfix grpelem" id="u24572-6" data-muse-uid="U24572" data-muse-type="txt_frame"><!-- content -->
-     <a class="block" href="https://www.wareable.com/wearable-tech/nyc-maker-faire-2016-best-wearable-vr-and-smart-home-devices"><!-- Block link tag --></a>
-     <p><span><a class="nonblock" href="https://www.fastcompany.com/3068873/world-changing-ideas-2017-winners"><span class="Character-Style" id="u24572">Fast Company's World Changing Ideas 2017</span></a></span></p>
-    </div>
+    <a class="nonblock nontext clearfix grpelem" id="u24572-4" href="https://www.fastcompany.com/3068873/world-changing-ideas-2017-winners" data-muse-uid="U24572" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24572">Fast Company's World Changing Ideas 2017</span></p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu12721"><!-- group -->
