--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=424057446"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4163626973"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=260317560" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=198938962"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=156183137" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=109564089"/>
@@ -158,7 +158,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix colelem" id="u24232-4" href="http://eandt.theiet.org/explore/students/2016/bright-young-things.cfm?origin=EtOtherStories" data-muse-uid="U24232" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24232">E&amp;T Magazine</span></p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U24238-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clearfix colelem" id="u24238-4" href="http://www.wareable.com/wearable-tech/keybod-concept-1764" data-muse-uid="U24238" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24238">Wearable</span></p></a>
+     <a class="nonblock nontext clearfix colelem" id="u24238-4" href="http://www.wareable.com/wearable-tech/keybod-concept-1764" data-muse-uid="U24238" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24238">Wareable</span></p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U24256-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clearfix colelem" id="u24256-4" href="http://www.t3.com/news/the-wearable-keyboard-which-won-t-let-you-stay-still" data-muse-uid="U24256" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24256">T3</span></p></a>
@@ -185,7 +185,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix grpelem" id="u24277-4" href="https://www.flickr.com/photos/famefamous/albums/72157667152536823" data-muse-uid="U24277" data-muse-type="txt_frame"><!-- content --><p id="u24277-2"><span class="Character-Style" id="u24277">here</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U24557-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix grpelem" id="u24557-4" href="https://www.wareable.com/wearable-tech/nyc-maker-faire-2016-best-wearable-vr-and-smart-home-devices" data-muse-uid="U24557" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24557">Wearable - The Best Wearable</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u24557-4" href="https://www.wareable.com/wearable-tech/nyc-maker-faire-2016-best-wearable-vr-and-smart-home-devices" data-muse-uid="U24557" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24557">Wareable - The Best Wearable</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U24572-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix grpelem" id="u24572-4" href="https://www.fastcompany.com/3068873/world-changing-ideas-2017-winners" data-muse-uid="U24572" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24572">Fast Company's World Changing Ideas 2017</span></p></a>
