--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=424057446"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=198938962"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=156183137" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4163626973"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4006863175" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=109564089"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=413754131"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -65,40 +65,42 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix colelem" id="u24287-4" href="https://www.linkedin.com/in/nitcha-tothong-5a537184" data-muse-uid="U24287" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24287">Connect on Linkedin</span></p></a>
     <!-- /m_editable -->
    </div>
-   <div class="clearfix colelem" id="ppu24148-81"><!-- group -->
-    <div class="clearfix grpelem" id="pu24148-81"><!-- group -->
+   <div class="clearfix colelem" id="ppu24148-87"><!-- group -->
+    <div class="clearfix grpelem" id="pu24148-87"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U24148-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u24148-81" data-muse-uid="U24148" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <div class="clearfix grpelem" id="u24148-87" data-muse-uid="U24148" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
       <p id="u24148-2"><span id="u24148">–</span></p>
       <p id="u24148-4">Exhibitions and Demos</p>
       <p id="u24148-6">2016</p>
-      <p id="u24148-11"><span id="u24148-7">Keybod </span>and <span id="u24148-9">Click-kick </span>at Put Together, Bodyhacking Con, Austin.</p>
-      <p id="u24148-14"><span id="u24148-12">Atta-matic </span>at BIOMEDevice Conference, San Jose.</p>
-      <p id="u24148-19"><span id="u24148-15">Atta-matic </span>at Maker Faire, New Yor<span id="u24148-17">k</span>.</p>
-      <p id="u24148-22"><span id="u24148-20">Atta-matic </span>at NYC Media Lab Summit 2016, New York.</p>
-      <p id="u24148-27"><span id="u24148-23">Keybod </span>and<span id="u24148-25"> Text-neck</span> at Erote, Hollow Art Space, Brooklyn</p>
-      <p id="u24148-30"><span id="u24148-28">Atta-matic </span>at Bushwick Collective 2016, Brooklyn.</p>
-      <p id="u24148-33"><span id="u24148-31">Atta-matic</span> at Between Spaces, New York.</p>
-      <p id="u24148-36"><span id="u24148-34">Lick it </span>at IndieCade East, Museum of Moving Image, New York.</p>
-      <p id="u24148-39"><span id="u24148-37">Dilation </span>at Parsons Gala 2016, New York.</p>
-      <p id="u24148-42"><span id="u24148-40">Atta-matic</span> at SXstyle Wearable Technology and Functional&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Garments Exhibitionation, SXSW, Austin.</p>
-      <p id="u24148-45"><span id="u24148-43">Lick it</span> at Meal of Fortune, Babycastles, New York.</p>
-      <p id="u24148-46">&nbsp;</p>
-      <p id="u24148-48">2015</p>
-      <p id="u24148-51"><span id="u24148-49">Lick it</span> at Newline, Babycastles, New York.</p>
-      <p id="u24148-54"><span id="u24148-52">Dilation</span> at Qualia, Livestream Bushwick, Brooklyn.</p>
-      <p id="u24148-57"><span id="u24148-55">Keybod</span> at NYC Media Lab Summit 2015, New York.</p>
-      <p id="u24148-60"><span id="u24148-58">Keybod</span> at Demo Night: Sound + Textiles at Eyebeam, New York.</p>
-      <p id="u24148-61">&nbsp;</p>
-      <p id="u24148-63">2009</p>
-      <p id="u24148-66"><span id="u24148-64">Rest(less)</span> at Ploysang 3, TCDC, Bangkok.</p>
-      <p id="u24148-69"><span id="u24148-67">Rest(less)</span> at Degree show2009, Parc Paragon, Bangkok.</p>
-      <p id="u24148-70">&nbsp;</p>
-      <p id="u24148-72">–</p>
-      <p id="u24148-74">Teaching and Workshop</p>
-      <p id="u24148-76">Interactive Accessories, Manufacture NY, New York</p>
-      <p id="u24148-78">Wearable Technology Class, Ofcourse, Brooklyn</p>
-      <p id="u24148-79">&nbsp;</p>
+      <p id="u24148-9"><span id="u24148-7">Atta-matic </span>at International Symposium on Wearable Computers&nbsp;&nbsp;&nbsp; (ISWC), Maui, Hawaii</p>
+      <p id="u24148-12"><span id="u24148-10">Atta-matic </span>at LSC After Dark, Liberty of Science, New Jersey.</p>
+      <p id="u24148-17"><span id="u24148-13">Keybod </span>and <span id="u24148-15">Click-kick </span>at Put Together, Bodyhacking Con, Austin.</p>
+      <p id="u24148-20"><span id="u24148-18">Atta-matic </span>at BIOMEDevice Conference, San Jose.</p>
+      <p id="u24148-25"><span id="u24148-21">Atta-matic </span>at Maker Faire, New Yor<span id="u24148-23">k</span>.</p>
+      <p id="u24148-28"><span id="u24148-26">Atta-matic </span>at NYC Media Lab Summit 2016, New York.</p>
+      <p id="u24148-33"><span id="u24148-29">Keybod </span>and<span id="u24148-31"> Text-neck</span> at Erote, Hollow Art Space, Brooklyn</p>
+      <p id="u24148-36"><span id="u24148-34">Atta-matic </span>at Bushwick Collective 2016, Brooklyn.</p>
+      <p id="u24148-39"><span id="u24148-37">Atta-matic</span> at Between Spaces, New York.</p>
+      <p id="u24148-42"><span id="u24148-40">Lick it </span>at IndieCade East, Museum of Moving Image, New York.</p>
+      <p id="u24148-45"><span id="u24148-43">Dilation </span>at Parsons Gala 2016, New York.</p>
+      <p id="u24148-48"><span id="u24148-46">Atta-matic</span> at SXstyle Wearable Technology and Functional&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Garments Exhibition, SXSW, Austin.</p>
+      <p id="u24148-51"><span id="u24148-49">Lick it</span> at Meal of Fortune, Babycastles, New York.</p>
+      <p id="u24148-52">&nbsp;</p>
+      <p id="u24148-54">2015</p>
+      <p id="u24148-57"><span id="u24148-55">Lick it</span> at Newline, Babycastles, New York.</p>
+      <p id="u24148-60"><span id="u24148-58">Dilation</span> at Qualia, Livestream Bushwick, Brooklyn.</p>
+      <p id="u24148-63"><span id="u24148-61">Keybod</span> at NYC Media Lab Summit 2015, New York.</p>
+      <p id="u24148-66"><span id="u24148-64">Keybod</span> at Demo Night: Sound + Textiles at Eyebeam, New York.</p>
+      <p id="u24148-67">&nbsp;</p>
+      <p id="u24148-69">2009</p>
+      <p id="u24148-72"><span id="u24148-70">Rest(less)</span> at Ploysang 3, TCDC, Bangkok.</p>
+      <p id="u24148-75"><span id="u24148-73">Rest(less)</span> at Degree show2009, Parc Paragon, Bangkok.</p>
+      <p id="u24148-76">&nbsp;</p>
+      <p id="u24148-78">–</p>
+      <p id="u24148-80">Teaching and Workshop</p>
+      <p id="u24148-82">Interactive Accessories, Manufacture NY, New York</p>
+      <p id="u24148-84">Wearable Technology Class, Ofcourse, Brooklyn</p>
+      <p id="u24148-85">&nbsp;</p>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U24545-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
@@ -113,7 +115,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix grpelem" id="u24160"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U24058-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u24058-48" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <div class="clearfix grpelem" id="u24058-67" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
       <p id="u24058-2">Press</p>
       <p id="u24058-4"><span id="u24058-3">Below you can find some on-line press articles.</span></p>
       <p id="u24058-9"><span id="u24058-5">If you are writing an article about my work, you are free to use images if you use proper credits</span><span id="u24058-6">.&nbsp; </span><span id="u24058-7">You can find my portrait here and please email me for access to particular project.</span><span id="u24058-8"></span></p>
@@ -132,15 +134,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p id="u24058-22">&nbsp;</p>
       <p id="u24058-24">–</p>
       <p id="u24058-26">Awards</p>
-      <p id="u24058-28">Fast Company’s World Changing Ideas 2017</p>
-      <p id="u24058-30">Finalists for Atta–matic: mind the body</p>
-      <p id="u24058-31">&nbsp;</p>
-      <p id="u24058-37">A<span id="u24058-33">dobe</span> <span id="u24058-35">Design Achievement Awards</span> 2015</p>
-      <p id="u24058-40">S<span id="u24058-39">emifinalist for Lucid: you are dreaming</span></p>
-      <p id="u24058-41">&nbsp;</p>
-      <p id="u24058-43">Degree show 2009 by Art4d, Thailand</p>
-      <p id="u24058-45">Jury's selected Animation for Rest(less)</p>
-      <p id="u24058-46">&nbsp;</p>
+      <p id="u24058-28">International Symposium on Wearable Computers (ISWC) 2017</p>
+      <p id="u24058-32"><span id="u24058-29">Design Exhibition</span> <span id="u24058-31">Finalists for Atta–matic: mind the body</span></p>
+      <p id="u24058-33">&nbsp;</p>
+      <p id="u24058-35">Fast Company’s World Changing Ideas 2017</p>
+      <p id="u24058-37">Finalists for Atta–matic: mind the body</p>
+      <p id="u24058-38">&nbsp;</p>
+      <p id="u24058-44">A<span id="u24058-40">dobe</span> <span id="u24058-42">Design Achievement Awards</span> 2015</p>
+      <p id="u24058-47">S<span id="u24058-46">emifinalist for Lucid: you are dreaming</span></p>
+      <p id="u24058-48">&nbsp;</p>
+      <p id="u24058-50">Degree show 2009 by Art4d, Thailand</p>
+      <p id="u24058-52">Jury's selected Animation for Rest(less)</p>
+      <p id="u24058-54">–</p>
+      <p id="u24058-56">Publication</p>
+      <p id="u24058-59"><span id="u24058-57">Atta-matic: mind the body</span> (Extended Version)</p>
+      <p id="u24058-61">Nitcha Tothong</p>
+      <p id="u24058-63">UbiComp '17 Proceedings of the 2017 ACM International Joint Conference on Pervasive and Ubiquitous Computing and Proceedings of the 2017 ACM International Symposium on Wearable Computers, 2017</p>
+      <p id="u24058-64">&nbsp;</p>
+      <p id="u24058-65">&nbsp;</p>
      </div>
      <!-- /m_editable -->
     </div>
@@ -189,6 +200,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U24572-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix grpelem" id="u24572-4" href="https://www.fastcompany.com/3068873/world-changing-ideas-2017-winners" data-muse-uid="U24572" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24572">Fast Company's World Changing Ideas 2017</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U24578-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix grpelem" id="u24578-6" href="http://iswc.net/iswc17/program/designexhibition.html" data-muse-uid="U24578" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24578">International Symposium on Wearable Computers</span></p><p><span class="Character-Style" id="u24578-3">(ISWC) 2017</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U24604-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix grpelem" id="u24604-5" href="http://dl.acm.org/authorize?N46041" data-muse-uid="U24604" data-muse-type="txt_frame"><!-- content --><p><span id="u24604">Atta-matic: mind the body</span> (Abstracts Extended)</p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu12721"><!-- group -->
