add another publ

--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=424057446"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4188312060"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=3949375936" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4200300649"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=3871489138" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=413754131"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=310497012"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -115,7 +115,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix grpelem" id="u24160"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U24058-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u24058-67" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <div class="clearfix grpelem" id="u24058-75" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
       <p id="u24058-2">Press</p>
       <p id="u24058-4"><span id="u24058-3">Below you can find some on-line press articles.</span></p>
       <p id="u24058-9"><span id="u24058-5">If you are writing an article about my work, you are free to use images if you use proper credits</span><span id="u24058-6">.&nbsp; </span><span id="u24058-7">You can find my portrait here and please email me for access to particular project.</span><span id="u24058-8"></span></p>
@@ -149,9 +149,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p id="u24058-56">Publication</p>
       <p id="u24058-59"><span id="u24058-57">Atta-matic: mind the body</span> (Extended Version)</p>
       <p id="u24058-61">Nitcha Tothong</p>
-      <p id="u24058-63">UbiComp '17 Proceedings of the 2017 ACM International Joint Conference on Pervasive and Ubiquitous Computing and Proceedings of the 2017 ACM International Symposium on Wearable Computers, 2017</p>
+      <p id="u24058-63">ISWC '17 Proceedings of the 2017 ACM International Symposium on Wearable Computers, 2017</p>
       <p id="u24058-64">&nbsp;</p>
-      <p id="u24058-65">&nbsp;</p>
+      <p id="u24058-67"><span id="u24058-65">Atta-matic: mind the body</span> (Extended Version)</p>
+      <p id="u24058-69">Nitcha Tothong</p>
+      <p id="u24058-71">UbiComp '17 Proceedings of the 2017 ACM International Joint Conference on Pervasive and Ubiquitous Computing and Proceedings of the 2017 ACM International Symposium on Wearable Computers, 2017</p>
+      <p id="u24058-72">&nbsp;</p>
+      <p id="u24058-73">&nbsp;</p>
      </div>
      <!-- /m_editable -->
     </div>
@@ -205,7 +209,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clearfix grpelem" id="u24578-6" href="http://iswc.net/iswc17/program/designexhibition.html" data-muse-uid="U24578" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24578">International Symposium on Wearable Computers</span></p><p><span class="Character-Style" id="u24578-3">(ISWC) 2017</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U24604-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix grpelem" id="u24604-5" href="http://dl.acm.org/authorize?N46041" data-muse-uid="U24604" data-muse-type="txt_frame"><!-- content --><p><span id="u24604">Atta-matic: mind the body</span> (Abstracts Extended)</p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u24604-6" href="http://dl.acm.org/authorize?N46040" data-muse-uid="U24604" data-muse-type="txt_frame"><!-- content --><p id="u24604-4"><span id="u24604">Atta-matic: mind the body</span><span id="u24604-2"> </span><span id="u24604-3">(Abstracts Extended)</span></p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U24610-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix grpelem" id="u24610-6" href="http://dl.acm.org/authorize?N46041" data-muse-uid="U24610" data-muse-type="txt_frame"><!-- content --><p id="u24610-4"><span id="u24610">Atta-matic: mind the body</span><span id="u24610-2"> </span><span id="u24610-3">(Demo Abstracts Extended)</span></p></a>
     <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu12721"><!-- group -->
