--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4219841521"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4200300649"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=3767254512" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=296932729"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=316532714" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=4025626045"/>
@@ -159,7 +159,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- /m_editable -->
      <div class="clearfix colelem" id="u24286"><!-- column -->
       <!-- m_editable region-id="editable-static-tag-U24288-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext clearfix colelem" id="u24288-4" href="2016_resumenitcha.pdf" data-muse-uid="U24288" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24288">Download Nitcha's Resumé</span></p></a>
+      <a class="nonblock nontext clearfix colelem" id="u24288-4" href="resumenitcha_new.pdf" data-muse-uid="U24288" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24288">Download Nitcha's Resumé</span></p></a>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U24287-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix colelem" id="u24287-4" href="https://www.linkedin.com/in/nitcha-tothong-5a537184" data-muse-uid="U24287" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24287">Connect on Linkedin</span></p></a>
@@ -228,8 +228,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- m_editable region-id="editable-static-tag-U12725-BP_infinity" template="about.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clip_frame grpelem" id="u12725" href="http://instagram.com/famenitcha" data-muse-uid="U12725" data-muse-type="img_frame"><!-- image --><img class="block" id="u12725_img" src="images/new3insta.png?crc=3954085402" alt="" width="16" height="16" data-muse-src="images/new3insta.png?crc=3954085402"/></a>
     <!-- /m_editable -->
-   </div>
-   <div class="clearfix colelem" id="pu12727"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U12727-BP_infinity" template="about.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clip_frame grpelem" id="u12727" href="https://vimeo.com/famefamous" data-muse-uid="U12727" data-muse-type="img_frame"><!-- image --><img class="block" id="u12727_img" src="images/new4vimeo.png?crc=4070217899" alt="" width="15" height="13" data-muse-src="images/new4vimeo.png?crc=4070217899"/></a>
     <!-- /m_editable -->
@@ -245,12 +243,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/new1mail-u12721-r-fr.png?crc=4051469361" alt=""/>
-   <img class="preload" src="images/new2fb-u12723-r-fr.png?crc=148424602" alt=""/>
-   <img class="preload" src="images/new3insta-u12725-r-fr.png?crc=203242076" alt=""/>
-   <img class="preload" src="images/new4vimeo-u12727-r-fr.png?crc=527731802" alt=""/>
-   <img class="preload" src="images/new5pin-u12729-r-fr.png?crc=4053791885" alt=""/>
-   <img class="preload" src="images/new6twitter-u12731-r-fr.png?crc=4116158665" alt=""/>
+   <img class="preload" src="images/new1mail-u7586-r-fr.png?crc=4051469361" alt=""/>
+   <img class="preload" src="images/new2fb-u7588-r-fr.png?crc=148424602" alt=""/>
+   <img class="preload" src="images/new3insta-u7590-r-fr.png?crc=203242076" alt=""/>
+   <img class="preload" src="images/new4vimeo-u7592-r-fr.png?crc=527731802" alt=""/>
+   <img class="preload" src="images/new5pin-u7594-r-fr.png?crc=4053791885" alt=""/>
+   <img class="preload" src="images/new6twitter-u7596-r-fr.png?crc=4116158665" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
