--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "jquery.musepolyfill.bgsize.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4219841521"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=296932729"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=344154968" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=117645944" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=4264641032"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=334070089"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/quicksand:n4,n7,i4,n3:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/quicksand:n4,i4,n3:all.js" type="text/javascript"></script>
     <!--custom head HTML-->
   <script src="http://isotope.metafizzy.co/beta/isotope.pkgd.min.js" type="text/javascript"></script>
 
@@ -163,15 +163,7 @@ transition:300ms;
      <a class="nonblock nontext clip_frame grpelem" id="u7873" href="https://github.com/Nitchafame" data-muse-uid="U7873" data-muse-type="img_frame"><!-- image --><img class="block" id="u7873_img" src="images/new7git.png?crc=3772234055" alt="" width="17" height="17" data-muse-src="images/new7git.png?crc=3772234055"/></a>
      <!-- /m_editable -->
     </div>
-    <img class="colelem" id="u15353-4" alt="Hello, I'm Nitcha or Fame, a visual designer who in love with visual aesthetic, moving image and physical interaction. Welcome to my website. " width="550" height="108" src="images/u15353-4.png?crc=3892128592" data-IBE-flags="txtStyleSrc"/><!-- rasterized frame -->
-    <div class="clearfix colelem" id="u15348"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U15350-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u15350-9" data-muse-uid="U15350" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p id="u15350-4"><span class="BoldMenuLink" id="u15350">I'm recently exploring, researching the speculative human-machine interaction by creating a series of wearable devices questioning how alternative tool can shape motility, which could impact the perception of the sedentary society. See more about project '</span><span class="BoldMenuLink" id="u15350-2"><span class="actAsInlineDiv normal_text" id="u24404"><!-- content --><!-- m_editable region-id="editable-static-tag-U24402-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" data-ice-editable="link" --><a class="nonblock nontext actAsDiv clearfix excludeFromNormalFlow" id="u24402-5" href="attamatic.html" data-href="page:U15059" data-muse-uid="U24402" data-muse-type="txt_frame"><!-- content --><span class="actAsPara" id="u24402-3"><span class="Character-Style" id="u24402">&nbsp;</span><span class="Character-Style" id="u24402-2">Atta-matic.</span></span></a><!-- /m_editable --></span></span><span class="BoldMenuLink" id="u15350-3">'</span></p>
-      <p id="u15350-7"><span id="u15350-5">— </span>2015–2017</p>
-     </div>
-     <!-- /m_editable -->
-    </div>
+    <img class="colelem" id="u15353-4" alt="Hello, I'm Nitcha or Fame, multidisciplinary designer, and artist who in love with visual aesthetic, moving image and physical interaction. Welcome to my website. " width="550" height="144" src="images/u15353-4.png?crc=101209966" data-IBE-flags="txtStyleSrc"/><!-- rasterized frame -->
     <div class="clearfix colelem" id="pu22731"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U22731-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame clearfix grpelem" id="u22731" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U22731" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u22731_img" src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374" alt="" width="427" height="240" data-muse-src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374"/></a>
