--- a/about.html
+++ b/about.html
@@ -16,12 +16,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>About</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4219841521"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=296932729"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=316532714" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3758432377"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4188312060"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=3920612336" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=4025626045"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=196372311"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -165,49 +165,58 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext clearfix colelem" id="u24287-4" href="https://www.linkedin.com/in/nitcha-tothong-5a537184" data-muse-uid="U24287" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24287">Connect on Linkedin</span></p></a>
       <!-- /m_editable -->
      </div>
-     <div class="clearfix colelem" id="pu24148-95"><!-- group -->
+     <div class="clearfix colelem" id="pu24148-101"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U24148-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix grpelem" id="u24148-95" data-muse-uid="U24148" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <div class="clearfix grpelem" id="u24148-101" data-muse-uid="U24148" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
        <p id="u24148-2"><span id="u24148">–</span></p>
        <p id="u24148-4">Exhibitions and Demos</p>
        <p id="u24148-6">2018</p>
        <p id="u24148-9">Remembering<span id="u24148-8"> at SFPC, New York</span></p>
-       <p id="u24148-11">2017</p>
-       <p id="u24148-14"><span id="u24148-12">Atta-matic </span>at International Symposium on Wearable Computers&nbsp;&nbsp;&nbsp; (ISWC), Maui, Hawaii</p>
-       <p id="u24148-17"><span id="u24148-15">Atta-matic </span>at LSC After Dark, Liberty of Science, New Jersey.</p>
-       <p id="u24148-22"><span id="u24148-18">Keybod </span>and <span id="u24148-20">Click-kick </span>at Put Together, Bodyhacking Con, Austin.</p>
-       <p id="u24148-23">&nbsp;</p>
-       <p id="u24148-25">2016</p>
-       <p id="u24148-28"><span id="u24148-26">Atta-matic </span>at BIOMEDevice Conference, San Jose.</p>
-       <p id="u24148-33"><span id="u24148-29">Atta-matic </span>at Maker Faire, New Yor<span id="u24148-31">k</span>.</p>
-       <p id="u24148-36"><span id="u24148-34">Atta-matic </span>at NYC Media Lab Summit 2016, New York.</p>
-       <p id="u24148-41"><span id="u24148-37">Keybod </span>and<span id="u24148-39"> Text-neck</span> at Erote, Hollow Art Space, Brooklyn</p>
-       <p id="u24148-44"><span id="u24148-42">Atta-matic </span>at Bushwick Collective 2016, Brooklyn.</p>
-       <p id="u24148-47"><span id="u24148-45">Atta-matic</span> at Between Spaces, New York.</p>
-       <p id="u24148-50"><span id="u24148-48">Lick it </span>at IndieCade East, Museum of Moving Image, New York.</p>
-       <p id="u24148-53"><span id="u24148-51">Dilation </span>at Parsons Gala 2016, New York.</p>
-       <p id="u24148-56"><span id="u24148-54">Atta-matic</span> at SXstyle Wearable Technology and Functional&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Garments Exhibition, SXSW, Austin.</p>
-       <p id="u24148-59"><span id="u24148-57">Lick it</span> at Meal of Fortune, Babycastles, New York.</p>
-       <p id="u24148-60">&nbsp;</p>
-       <p id="u24148-62">2015</p>
-       <p id="u24148-65"><span id="u24148-63">Lick it</span> at Newline, Babycastles, New York.</p>
-       <p id="u24148-68"><span id="u24148-66">Dilation</span> at Qualia, Livestream Bushwick, Brooklyn.</p>
-       <p id="u24148-71"><span id="u24148-69">Keybod</span> at NYC Media Lab Summit 2015, New York.</p>
-       <p id="u24148-74"><span id="u24148-72">Keybod</span> at Demo Night: Sound + Textiles at Eyebeam, New York.</p>
-       <p id="u24148-75">&nbsp;</p>
-       <p id="u24148-77">2009</p>
-       <p id="u24148-80"><span id="u24148-78">Rest(less)</span> at Ploysang 3, TCDC, Bangkok.</p>
-       <p id="u24148-83"><span id="u24148-81">Rest(less)</span> at Degree show2009, Parc Paragon, Bangkok.</p>
-       <p id="u24148-84">&nbsp;</p>
-       <p id="u24148-86">–</p>
-       <p id="u24148-88">Teaching and Workshop</p>
-       <p id="u24148-90">Interactive Accessories, Manufacture NY, New York</p>
-       <p id="u24148-92">Wearable Technology Class, Ofcourse, Brooklyn</p>
-       <p id="u24148-93">&nbsp;</p>
+       <p id="u24148-12">Lick it<span id="u24148-11"> at Chewing Monster, Red Brick Space, New York</span></p>
+       <p id="u24148-15">Remembering<span id="u24148-14"> at On Collaboration: Creative Technology Exhibition, Macy Art Gallery, New York</span></p>
+       <p id="u24148-16">&nbsp;</p>
+       <p id="u24148-18">2017</p>
+       <p id="u24148-21"><span id="u24148-19">Atta-matic </span>at International Symposium on Wearable Computers&nbsp;&nbsp;&nbsp; (ISWC), Maui, Hawaii</p>
+       <p id="u24148-24"><span id="u24148-22">Atta-matic </span>at LSC After Dark, Liberty of Science, New Jersey</p>
+       <p id="u24148-29"><span id="u24148-25">Keybod </span>and <span id="u24148-27">Click-kick </span>at Put Together, Bodyhacking Con, Austin</p>
+       <p id="u24148-30">&nbsp;</p>
+       <p id="u24148-32">2016</p>
+       <p id="u24148-35"><span id="u24148-33">Atta-matic </span>at BIOMEDevice Conference, San Jose</p>
+       <p id="u24148-39"><span id="u24148-36">Atta-matic </span>at Maker Faire, New Yor<span id="u24148-38">k</span></p>
+       <p id="u24148-42"><span id="u24148-40">Atta-matic </span>at NYC Media Lab Summit 2016, New York</p>
+       <p id="u24148-47"><span id="u24148-43">Keybod </span>and<span id="u24148-45"> Text-neck</span> at Erote, Hollow Art Space, Brooklyn</p>
+       <p id="u24148-50"><span id="u24148-48">Atta-matic </span>at Bushwick Collective 2016, Brooklyn</p>
+       <p id="u24148-53"><span id="u24148-51">Atta-matic</span> at Between Spaces, New York</p>
+       <p id="u24148-56"><span id="u24148-54">Lick it </span>at IndieCade East, Museum of Moving Image, New York</p>
+       <p id="u24148-59"><span id="u24148-57">Dilation </span>at Parsons Gala 2016, New York</p>
+       <p id="u24148-62"><span id="u24148-60">Atta-matic</span> at SXstyle Wearable Technology and Functional&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Garments Exhibition, SXSW, Austin</p>
+       <p id="u24148-65"><span id="u24148-63">Lick it</span> at Meal of Fortune, Babycastles, New York</p>
+       <p id="u24148-66">&nbsp;</p>
+       <p id="u24148-68">2015</p>
+       <p id="u24148-71"><span id="u24148-69">Lick it</span> at Newline, Babycastles, New York</p>
+       <p id="u24148-74"><span id="u24148-72">Dilation</span> at Qualia, Livestream Bushwick, Brooklyn</p>
+       <p id="u24148-77"><span id="u24148-75">Keybod</span> at NYC Media Lab Summit 2015, New York</p>
+       <p id="u24148-80"><span id="u24148-78">Keybod</span> at Demo Night: Sound + Textiles at Eyebeam, New York</p>
+       <p id="u24148-81">&nbsp;</p>
+       <p id="u24148-83">2009</p>
+       <p id="u24148-86"><span id="u24148-84">Rest(less)</span> at Ploysang 3, TCDC, Bangkok</p>
+       <p id="u24148-89"><span id="u24148-87">Rest(less)</span> at Degree show2009, Parc Paragon, Bangkok</p>
+       <p id="u24148-90">&nbsp;</p>
+       <p id="u24148-92">–</p>
+       <p id="u24148-94">Teaching and Workshop</p>
+       <p id="u24148-96">Interactive Accessories, Manufacture NY, New York</p>
+       <p id="u24148-98">Wearable Technology Class, Ofcourse, Brooklyn</p>
+       <p id="u24148-99">&nbsp;</p>
       </div>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U24545-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix grpelem" id="u24545-4" href="http://www.moutharcade.com/mealoffortune" data-muse-uid="U24545" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24545">Meal of Fortune</span></p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U24907-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u24907-4" href="https://chewingmonster.com" data-muse-uid="U24907" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24907">Chewing Monster</span></p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U24913-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u24913-4" href="http://ctc.tc.columbia.edu/past-1/2018/1/8/creative-technologies-exhibition" data-muse-uid="U24913" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24913">On Collaboration</span></p></a>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U24560-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix grpelem" id="u24560-4" href="http://www.ofcn.io/" data-muse-uid="U24560" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24560">Ofcourse</span></p></a>
@@ -243,12 +252,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/new1mail-u7586-r-fr.png?crc=4051469361" alt=""/>
-   <img class="preload" src="images/new2fb-u7588-r-fr.png?crc=148424602" alt=""/>
-   <img class="preload" src="images/new3insta-u7590-r-fr.png?crc=203242076" alt=""/>
-   <img class="preload" src="images/new4vimeo-u7592-r-fr.png?crc=527731802" alt=""/>
-   <img class="preload" src="images/new5pin-u7594-r-fr.png?crc=4053791885" alt=""/>
-   <img class="preload" src="images/new6twitter-u7596-r-fr.png?crc=4116158665" alt=""/>
+   <img class="preload" src="images/new1mail-u12721-r-fr.png?crc=4051469361" alt=""/>
+   <img class="preload" src="images/new2fb-u12723-r-fr.png?crc=148424602" alt=""/>
+   <img class="preload" src="images/new3insta-u12725-r-fr.png?crc=203242076" alt=""/>
+   <img class="preload" src="images/new4vimeo-u12727-r-fr.png?crc=527731802" alt=""/>
+   <img class="preload" src="images/new5pin-u12729-r-fr.png?crc=4053791885" alt=""/>
+   <img class="preload" src="images/new6twitter-u12731-r-fr.png?crc=4116158665" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
