--- a/about.html
+++ b/about.html
@@ -16,12 +16,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>About</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3758432377"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4188312060"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=3920612336" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4219841521"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4200300649"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4122934434" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=196372311"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=281622105"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -165,9 +165,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext clearfix colelem" id="u24287-4" href="https://www.linkedin.com/in/nitcha-tothong-5a537184" data-muse-uid="U24287" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24287">Connect on Linkedin</span></p></a>
       <!-- /m_editable -->
      </div>
-     <div class="clearfix colelem" id="pu24148-101"><!-- group -->
+     <div class="clearfix colelem" id="pu24148-106"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U24148-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix grpelem" id="u24148-101" data-muse-uid="U24148" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <div class="clearfix grpelem" id="u24148-106" data-muse-uid="U24148" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
        <p id="u24148-2"><span id="u24148">–</span></p>
        <p id="u24148-4">Exhibitions and Demos</p>
        <p id="u24148-6">2018</p>
@@ -203,10 +203,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p id="u24148-89"><span id="u24148-87">Rest(less)</span> at Degree show2009, Parc Paragon, Bangkok</p>
        <p id="u24148-90">&nbsp;</p>
        <p id="u24148-92">–</p>
-       <p id="u24148-94">Teaching and Workshop</p>
-       <p id="u24148-96">Interactive Accessories, Manufacture NY, New York</p>
-       <p id="u24148-98">Wearable Technology Class, Ofcourse, Brooklyn</p>
-       <p id="u24148-99">&nbsp;</p>
+       <p id="u24148-94">Teaching, Workshop, and Speaking Engagements</p>
+       <p id="u24148-97"><span id="u24148-95">Interactive Accessories</span>, Manufacture NY, New York</p>
+       <p id="u24148-100"><span id="u24148-98">Wearable Technology Class</span>, Ofcourse, Brooklyn</p>
+       <p id="u24148-103"><span id="u24148-101">Modes of Collaboration</span>: Creative Technology Symposium V, part of session Two: Collaboration with Machines, The Creative Technologies Curriculum (CTC) at Teacher Collage, Columbia University, New York</p>
+       <p id="u24148-104">&nbsp;</p>
       </div>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U24545-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
@@ -223,6 +224,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U24566-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
       <a class="nonblock nontext clearfix grpelem" id="u24566-4" href="http://manufactureny.org/" data-muse-uid="U24566" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24566">Manufacture NY</span></p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U24919-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u24919-4" href="http://ctc.tc.columbia.edu/past-1/2018/5/3/modes-of-collaboration" data-muse-uid="U24919" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24919">Creative Technology Symposium V</span></p></a>
       <!-- /m_editable -->
      </div>
     </div>
